--- a/views/home.html
+++ b/views/home.html
@@ -1,9 +1,8 @@
-
 <!DOCTYPE html>
 
 <html><head>
 
-<title> Alphabot-Api </title>
+<title> AST-IT BOT - API</title>
 
 <meta charset="UTF-8"> 
 
@@ -15,13 +14,13 @@
 
 <meta name="googlebot" content="index,follow">
 
-<meta property="og:title" content="Api-Alphabot"/>  
+<meta property="og:title" content="AST-IT BOT"/>  
 
 <meta name="description" content="Sedang Berusaha Untuk Memperbaiki Diri"> 
 
-<meta property="og:image" content="https://e.top4top.io/p_2010lz9211.jpg">
+<meta property="og:image" content="https://i.ibb.co/XZ8nD3S/fire.png">
 
-<link rel="shortcut icon" href="https://e.top4top.io/p_2010lz9211.jpg" />  
+<link rel="shortcut icon" href="https://i.ibb.co/XZ8nD3S/fire.png" />  
 
 <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 
@@ -329,7 +328,7 @@ font-family: 'New Rocker',cursive;
 
 <center>
 
-<img class="image" src="https://d.top4top.io/p_20446o69o1.jpg" height="860" width="709"><br>
+<img class="image" src="https://i.ibb.co/XZ8nD3S/fire.png" height="860" width="709"><br>
 
 <div class="blink">
 
@@ -337,7 +336,7 @@ font-family: 'New Rocker',cursive;
 
 <b>
 
-  <span class="one">REST API</span><span class="two"> ALPHABOT</span>
+  <span class="one">REST API</span><span class="two">AST-IT BOT</span>
 
   </b
 
@@ -346,68 +345,3 @@ font-family: 'New Rocker',cursive;
 </div>
 
 </div>
-
-<br>
-
-<a id="one" href="/api">DOCUMENTATION</a>
-
-<script type="text/javascript">
-
-Sayings = "";
-
-			var now = new Date();			var hours = now.getHours();
-
-			if (hours >= 16 && hours <= 17){
-
-			Sayings += "<span class='text-success'>Sholat Maghrib Bro</span>"
-
-			} else if (hours >= 18 || hours <= 2){
-
-			Sayings += "<span class='text-success'>Selamat Malam</span>"
-
-			} else if (hours >= 3 && hours <= 10){
-
-			Sayings += "<span class='text-success'>Selamat Pagi</span>"
-
-			} else if (hours >= 11 && hours <= 14){
-
-			Sayings += "<span class='text-success'>Selamat Siang</span>"
-
-			} else if (hours >= 13 && hours <= 15){
-
-			Sayings += "<span class='text-success'>Selamat Sore</span>"
-
-			}
-
-document.getElementById("sayings").innerHTML = Sayings 
-window.setTimeout("waktu()", 1000);
-
- 
-
-	function waktu() {
-
-		var waktu = new Date();
-
-		setTimeout("waktu()", 1000);
-
-		document.getElementById("jam").innerHTML = waktu.getHours();
-
-		document.getElementById("menit").innerHTML = waktu.getMinutes();
-
-		document.getElementById("detik").innerHTML = waktu.getSeconds();
-
-	}
-
-    </script>
-
-    <!--<audio autoplay="true" src="https://j.top4top.io/m_1772xeikf9.mp3"></audio>-->
-
-    <b><h2 id="one"><marquee width="70%">Jika suka dengan api ini tolong bantu subscribe youtube ZEEONE OFC Terima Kasih 😇</marquee></h2></b>
-
-   </body>
-
-</td>
-
-</table>
-
-</html>
