--- a/views/index.html
+++ b/views/index.html
@@ -5,11 +5,11 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta property="og:image" content="https://e.top4top.io/p_2010lz9211.jpg" /> 
+  <meta property="og:image" content="https://i.ibb.co/XZ8nD3S/fire.png" /> 
 
-<meta property="og:title" content="Alphabot - APIs" /> <meta property="og:description" content="Made By Me ᴹᴿ᭄zeeoneㄙ "/> 
+<meta property="og:title" content="Alphabot - APIs" /> <meta property="og:description" content="Made By Me AsepitGanz "/> 
 
-<link rel="shortcut icon" href="https://e.top4top.io/p_2010lz9211.jpg" type="image/x-icon" />
+<link rel="shortcut icon" href="https://i.ibb.co/XZ8nD3S/fire.png" type="image/x-icon" />
 
   <title>Alphabot - Rest Api's</title>
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
@@ -223,7 +223,7 @@ button1:hover {
     <ul class="navbar-nav sidebar sidebar-light accordion" id="accordionSidebar">
       <a class="sidebar-brand d-flex align-items-center justify-content-center" href="#">
         <div class="sidebar-brand-icon">
-        	<img src="https://e.top4top.io/p_2010lz9211.jpg">
+        	<img src="https://i.ibb.co/XZ8nD3S/fire.png">
         </div>
         <div class="sidebar-brand-text mx-3">Alphabot - Api</div>
       </a>
@@ -518,7 +518,7 @@ button1:hover {
             <a class="collapse-item" href="/api/lk21/terbaru?apikey=Alphabot">Film Terbaru</a>
             <a class="collapse-item" href="/api/lk21/comingsoon?apikey=Alphabot">Film Yg Akan Datang</a>
             <a class="collapse-item" href="/api/lk21/tvseries?apikey=Alphabot">Series TV</a>
-            <a class="collapse-item" href="/api/lk21/year?tahun=2021&apikey=Alphabot">Berdasarkan Tahun</a>
+            <a class="collapse-item" href="/api/lk21/year?tahun=2022&apikey=Alphabot">Berdasarkan Tahun</a>
             <a class="collapse-item" href="/api/lk21/country?negara=indonesia&apikey=Alphabot">Berdasarkan Negara</a>
             <a class="collapse-item" href="/api/lk21/genre?tipe=action&apikey=Alphabot">Berdasarkan Genre</a>
             </div>
@@ -616,33 +616,33 @@ button1:hover {
       </li>
       <li class="nav-item">
           
-            <a class="nav-link collapsed" href="https://wa.me/message/JBGU4J2DVYEDK1">
+            <a class="nav-link collapsed" href="https://wa.me/6289530656600">
             <i class="fab fa-fw fa-whatsapp"></i>
                     <span>WhatsApp</span>
             </a>
       </li>
     
       <li class="nav-item">
-            <a class="nav-link collapsed" href="https://instagram.com/zeeoneofc">
+            <a class="nav-link collapsed" href="https://instagram.com/asepit_ganz">
             <i class="fab fa-fw fa-instagram"></i>
                     <span>Instagram</span>
             </a>
           <li class="nav-item">
-            <a class="nav-link collapsed" href="https://t.me/zeeoneee">
+            <a class="nav-link collapsed" href="https://t.me/termorekasepit">
             <i class="fab fa-fw fa-telegram"></i>
                     <span>Telegram</span>
             </a>
       </li>
        <li class="nav-item">
-            <a class="nav-link collapsed" href="https://youtu.be/rrBSSnfinhg">
+            <a class="nav-link collapsed" href="https://youtube.com/channel/UCKV9QGTZQIM6xc9UPSnSdXg">
             <i class="fab fa-fw fa-youtube"></i>
                     <span>YouTube</span>
             </a>
       </li>
       <li class="nav-item">
-            <a class="nav-link collapsed" href="https://github.com/zeeoneofc">
+            <a class="nav-link collapsed" href="http://tool.unitedcyberteam.com/">
             <i class="fab fa-fw fa-github"></i>
-                    <span>Github</span>
+                    <span>Tools</span>
             </a>
       </li>
        <li class="nav-item">
@@ -652,7 +652,7 @@ button1:hover {
             </a>
       </li>
       <hr class="sidebar-divider">
-      <div class="version"><b>Made With ♥️ By Zeeone</b></div>
+      <div class="version"><b>Made With ♥️ By Asepitgans</b></div>
     </ul>
     <!-- Sidebar -->
     <div id="content-wrapper" class="d-flex flex-column">
@@ -702,7 +702,7 @@ button1:hover {
                     </div>
                   </div>
                   <div>
-                    <div class="small text-gray-500">March 12, 2021</div>
+                    <div class="small text-gray-500">March 12, 2022</div>
                     <span class="font-weight-bold">This rest api was made!</span>
                   </div>
                 </a>
@@ -713,7 +713,7 @@ button1:hover {
                     </div>
                   </div>
                   <div>
-                    <div class="small text-gray-500">March 29, 2021</div>
+                    <div class="small text-gray-500">March 29, 2022</div>
                     This website has some problems!!!
                   </div>
                 </a>
@@ -724,7 +724,7 @@ button1:hover {
                     </div>
                   </div>
                   <div>
-                    <div class="small text-gray-500">May 2, 2021</div>
+                    <div class="small text-gray-500">May 2, 2022</div>
                     This website is back on as usual ✨
                   </div>
                 </a>
@@ -811,7 +811,7 @@ button1:hover {
                     </div>
                   </div>
                 </a>
-                <a class="dropdown-item text-center small text-gray-500" href="https://www.instagram.com/zeeoneofc">View All Information</a>
+                <a class="dropdown-item text-center small text-gray-500" href="https://www.instagram.com/asepit_ganz">View All Information</a>
               </div>
             </li>
             <div class="topbar-divider d-none d-sm-block"></div>
@@ -819,18 +819,18 @@ button1:hover {
               <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-toggle="dropdown"
                 aria-haspopup="true" aria-expanded="false">
                 <img class="img-profile rounded-circle" src="img/logo.jpg" style="max-width: 60px">
-                <span class="ml-2 d-none d-lg-inline text-white small"> ᴹᴿ᭄zeeoneㄙ </span>
+                <span class="ml-2 d-none d-lg-inline text-white small"> asepitgans </span>
               </a>
               <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in" aria-labelledby="userDropdown">
-                <a class="dropdown-item" href="https://wa.me/message/JBGU4J2DVYEDK1">
+                <a class="dropdown-item" href="https://wa.me/6289530656600">
                   <i class="fab fa-fw fa-whatsapp"></i>
                   Whatsapp
                 </a>
-                <a class="dropdown-item" href="https://t.me/zeeoneofc">
+                <a class="dropdown-item" href="https://t.me/termorekasepit">
                   <i class="fab fa-fw fa-telegram"></i>
                   Telegram
                 </a>
-                <a class="dropdown-item" href="https://www.instagram.com/zeeoneofc">
+                <a class="dropdown-item" href="https://www.instagram.com/asepit_ganz">
                   <i class="fab fa-fw fa-instagram"></i>
                   Instagram
                 </a>
@@ -994,7 +994,7 @@ button1:hover {
 
 </span>
 
-<span>Menuju Tahun baru</span>
+<span>Tahun baru 2022</span>
 
 </div>
 
@@ -1054,11 +1054,11 @@ button1:hover {
                 </div>
 		      <div class="card-body">
 
-		<img src="https://e.top4top.io/p_2010lz9211.jpg" alt="My Life" width="100%" >
+		<img src="https://i.ibb.co/XZ8nD3S/fire.png" alt="My Life" width="100%" >
 
 			<br><br><p><b>
 
-						API KEY :<br>🤠 [ Free ] <a href="https://youtube.com/c/ZEEONEOFC"><strong> APIKEY</strong></a> <br> <br>BOT WHATSAPP<br>1. SELF-PUBLIC BOT <a href="https://youtu.be/4VpYJm7RfVk"><strong>KLIK DISINI</strong></a><br>2. PUBLIC BOT <a href="https://youtu.be/-qSNbeVEIec"><strong>KLIK DISINI</strong></a><br><br>
+						API KEY :<br>🤠 [ Free ] <a href="https://youtube.com/channel/UCKV9QGTZQIM6xc9UPSnSdXg"><strong> APIKEY</strong></a> <br> <br>
 
 					<p>
 					</b>
@@ -1089,17 +1089,17 @@ button1:hover {
 <!--<div class="card-body">
                   <div class="mb-3">
                     <div class="small text-gray-500">Hai Mastah Welcome
-                      <div class="small float-right"><b>09-05-2021</b></div>
+                      <div class="small float-right"><b>09-05-2022</b></div>
                     </div>
                   </div>
                   <div class="mb-3">
                     <div class="small text-gray-500">Pemula Stah Jangan Di bully:(
-                      <div class="small float-right"><b>09-05-2021</b></div>
+                      <div class="small float-right"><b>09-05-2022</b></div>
                     </div>
                   </div>
                   <div class="mb-3">
                     <div class="small text-gray-500">Update NSFW&ASUPAN!!!
-                      <div class="small float-right"><b>11-05-2021</b></div>
+                      <div class="small float-right"><b>11-05-2022</b></div>
                     </div>
                   </div>
                   <div class="mb-3">
@@ -1116,7 +1116,7 @@ button1:hover {
 
           <div class="row">
             <div class="col-lg-12 text-center">
-              <p>Nemu Bug? Harap Lapor Ya!!! : <a href="https://wa.me/message/SJGWPAW7OHHXK1"
+              <p>Nemu Bug? Harap Lapor Ya!!! : <a href="https://wa.me/6289530656600"
                   class="btn btn-primary btn-sm" target="_blank"><i class="fas fa-bug"></i>&nbsp;Bug</a></p>
             </div>
           </div>
@@ -1128,8 +1128,8 @@ button1:hover {
       <footer class="sticky-footer bg-white">
         <div class="container my-auto">
           <div class="copyright text-center my-auto">
-            <span>Copyright &copy; 2021 -
-              <b><a href="https://instagram.com/zee.oneee" target="_blank">Alphabot</a> .Allright reserved</b>
+            <span>Copyright &copy; 2022-
+              <b><a href="https://unitedcyberteam.com/" target="_blank">Asepitgans</a> .Allright reserved</b>
             </span>
           </div>
         </div>
