--- a/views/index.html
+++ b/views/index.html
@@ -11,7 +11,7 @@
 
 <link rel="shortcut icon" href="https://i.ibb.co/XZ8nD3S/fire.png" type="image/x-icon" />
 
-  <title>Alphabot - Rest Api's</title>
+  <title>AsepitGanz - Rest Api's</title>
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css">
   <link href="css/ruang-admin.min.css" rel="stylesheet">
