--- a/views/index.html
+++ b/views/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta property="og:image" content="https://i.ibb.co/XZ8nD3S/fire.png" /> 
 
-<meta property="og:title" content="Alphabot - APIs" /> <meta property="og:description" content="Made By Me AsepitGanz "/> 
+<meta property="og:title" content="AsepitGanz - API" /> <meta property="og:description" content="Made By Me AsepitGanz "/> 
 
 <link rel="shortcut icon" href="https://i.ibb.co/XZ8nD3S/fire.png" type="image/x-icon" />
 
@@ -225,7 +225,7 @@ button1:hover {
         <div class="sidebar-brand-icon">
         	<img src="https://i.ibb.co/XZ8nD3S/fire.png">
         </div>
-        <div class="sidebar-brand-text mx-3">Alphabot - Api</div>
+        <div class="sidebar-brand-text mx-3">AsepitGanz - Api</div>
       </a>
       <hr class="sidebar-divider my-0">
       <li class="nav-item active">
