--- a/views/index.html
+++ b/views/index.html
@@ -1266,7 +1266,7 @@ const check_match = () => {
 const check_for_winner = () => {
   let res = check_match()
   if (res == player) {
-    winner.innerText = "You Win Apikey: Alphabot";
+    winner.innerText = "You Win Apikey: AsepitGanz";
     winner.classList.add("playerWin");
     board_full = true
   } else if (res == computer) {
